--- a/main/wifi/CMakeLists.txt
+++ b/main/wifi/CMakeLists.txt
@@ -1,6 +1,6 @@
 idf_component_register(
-    SRCS "networking.c"
+    SRCS "wifi.c"
     INCLUDE_DIRS "."
     REQUIRES ""
-    PRIV_REQUIRES ""
+    PRIV_REQUIRES esp_wifi
  )
