add bmx, abstract measurement

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,5 +1,5 @@
 idf_component_register(
-    SRCS "main.c" "utils/environmentals.c" "utils/MAX44009.c" "data/flash_storage.c"
+    SRCS "main.c" "data/flash_storage.c"
     INCLUDE_DIRS "." 
-    REQUIRES dht nvs_flash
-    )
+    REQUIRES nvs_flash bmx280 i2c_sensors grow
+)
