code cleanup, move components into correct dir,add soil sensor calibration methods, start on networking methods.

--- a/components/grow/CMakeLists.txt
+++ b/components/grow/CMakeLists.txt
@@ -1,5 +1,5 @@
 idf_component_register(
         SRCS "grow.c"
         INCLUDE_DIRS "."
-        REQUIRES bmx280 i2c_sensors
+        REQUIRES bmx280 i2c_sensors data
 )
