--- a/components/wifi/CMakeLists.txt
+++ b/components/wifi/CMakeLists.txt
@@ -2,5 +2,5 @@ idf_component_register(
     SRCS "wifi.c"
     INCLUDE_DIRS "."
     REQUIRES ""
-    PRIV_REQUIRES esp_wifi
+    PRIV_REQUIRES esp_wifi data
  )
