--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,8 @@
 cmake_minimum_required(VERSION 3.5)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
-set(EXTRA_COMPONENT_DIRS D:/Espressif/esp-idf-lib/components)
+#set(COMPONENT_DIRS $ENV{IDF_PATH}/components /components)
+#set(EXTRA_COMPONENT_DIRS D:/Espressif/esp-idf-lib/components)
 
 project(budbroker_soil_iot)
 
