--- a/components/bud_ble/CMakeLists.txt
+++ b/components/bud_ble/CMakeLists.txt
@@ -1,5 +1,5 @@
 idf_component_register(
     SRCS "bluetooth.c"
     INCLUDE_DIRS "."
-    PRIV_REQUIRES nvs_flash data
+    REQUIRES nvs_flash bt data grow
 )
